--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,6 @@
   <textarea id="desc" rows="2"></textarea>
 
   <button type="submit">Зберегти</button>
-  <button type="button" class="secondary" onclick="window.open('list.html', '_blank')">Всі посилки</button>
 </form>
 
 <script>
@@ -74,43 +73,64 @@
 
   renderVolumeInputs(1); // Initial render
 
-  // IndexedDB setup
+  // ініціалізація IndexedDB
   let db;
-  const request = indexedDB.open('ParcelsDB', 1);
-  request.onupgradeneeded = event => {
+  const openDB = indexedDB.open('ParcelsDB', 1);
+  openDB.onupgradeneeded = event => {
     db = event.target.result;
-    db.createObjectStore('parcels', { keyPath: 'number' });
-  };
-  request.onsuccess = event => db = event.target.result;
-
-  document.getElementById('form').addEventListener('submit', e => {
-    e.preventDefault();
-
-    const number = document.getElementById('number').value.trim();
-    const weight = parseFloat(document.getElementById('weight').value);
-    const count = parseInt(countInput.value);
-    const volumes = Array.from(document.getElementsByName('volume')).map(i => parseFloat(i.value));
-    const city = document.getElementById('city').value.trim();
-    const branch = document.getElementById('branch').value.trim();
-    const phone = document.getElementById('phone').value.trim(); // без валідації
-    const price = parseFloat(document.getElementById('price').value);
-    const desc = document.getElementById('desc').value.trim();
-
-    if (volumes.length !== count || volumes.some(isNaN)) {
-      alert('Заповніть всі обʼємні ваги коректно!');
-      return;
+    if (!db.objectStoreNames.contains('parcels')) {
+      db.createObjectStore('parcels', { keyPath: 'number' });
     }
+  };
 
-    const data = { number, weight, count, volumes, city, branch, phone, price, desc, createdAt: new Date().toISOString() };
-    const tx = db.transaction(['parcels'], 'readwrite');
-    const store = tx.objectStore('parcels');
-    store.put(data);
-    tx.oncomplete = () => {
-      alert('Посилку збережено!');
-      document.getElementById('form').reset();
-      renderVolumeInputs(1);
-    };
-  });
+  openDB.onsuccess = event => {
+    db = event.target.result;
+
+    document.getElementById('form').addEventListener('submit', e => {
+      e.preventDefault();
+
+      const number = document.getElementById('number').value.trim();
+      const weight = parseFloat(document.getElementById('weight').value);
+      const count = parseInt(countInput.value);
+      const volumes = Array.from(document.getElementsByName('volume')).map(i => parseFloat(i.value));
+      const city = document.getElementById('city').value.trim();
+      const branch = document.getElementById('branch').value.trim();
+      const phone = document.getElementById('phone').value.trim();
+      const price = parseFloat(document.getElementById('price').value);
+      const desc = document.getElementById('desc').value.trim();
+
+      if (volumes.length !== count || volumes.some(isNaN)) {
+        alert('Заповніть всі обʼємні ваги коректно!');
+        return;
+      }
+
+      const data = {
+        number,
+        weight,
+        count,
+        volumes,
+        city,
+        branch,
+        phone,
+        price,
+        desc,
+        createdAt: new Date().toISOString()
+      };
+
+      const tx = db.transaction(['parcels'], 'readwrite');
+      const store = tx.objectStore('parcels');
+      store.put(data);
+      tx.oncomplete = () => {
+        alert('Посилку збережено!');
+        document.getElementById('form').reset();
+        renderVolumeInputs(1);
+      };
+    });
+  };
+
+  openDB.onerror = () => {
+    alert('Помилка підключення до бази даних IndexedDB');
+  };
 </script>
 </body>
 </html>
